# ollama-scanner

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: release.yml
cmake/: cpm.cmake
src/: main.cpp
